# everybot_ros_origin

./: README.md
everybot_msgs/: CMakeLists.txt  package.xml
everybot_msgs/msg/: Frontier.msg  Pixart.msg  ThreeSpinEncoder.msg
everybot_msgs/srv/: Explorer.srv  Planning.srv
everybot_odom_handler/: CMakeLists.txt  package.xml
everybot_odom_handler/include/everybot_odom_handler/: commonstruct.h  everybot_odom_handler.h
everybot_odom_handler/launch/: everybot_odom_handler.launch
everybot_odom_handler/src/everybot_odom_handler/: everybot_odom_handler.cpp  everybot_odom_handler_node.cpp
ts800_ros/: CMakeLists.txt  TS800.drawio  TS800control.drawio  TS800flow.drawio  TS800slam.drawio  package.xml  uml  uml_class  uml_controller  uml_debug  uml_dispatcher  uml_flow  uml_lidarInterface  uml_map  uml_monitor  uml_motionplanner  uml_service  uml_taskPlanner  uml_ui
ts800_ros/cfg/: RobotParameter.cfg
ts800_ros/launch/: all.launch  all_ts800_ws_2_2.launch  cartographer.launch  cartographer_load_state.launch  cartographer_node.launch  cartographer_occupancy_grid_node.launch  cartographer_temp_load_state.launch  ceva.launch  run_slam.py  test_all_no_carto.launch  test_cartographer.launch
ts800_ros/launch/lidar/: 3i_lidar.launch
ts800_ros/msg/: Feedback.msg  RotationVector.msg  SlamControl.msg  SubmapEntry.msg  SubmapList.msg
ts800_ros/nodes/fake_odometry/: fake_odom.cpp
ts800_ros/nodes/imu/: imu.h  imu_node.cpp
ts800_ros/nodes/lidarFilter/: lidarFilter.cpp  lidarFilter.h  lidarFilter_node.cpp
ts800_ros/nodes/odometry/: odometry.cpp  odometry.h  odometry_node.cpp
ts800_ros/nodes/static_transform/: static_transform.cpp
ts800_ros/nodes/system_monitor_ros/: system_monitor.cpp  system_monitor.h  system_monitor_node.cpp
ts800_ros/nodes/trajectory_editor/: trajectory_editor_node.cpp
ts800_ros/param/: tinyslam_param_220308.yaml
ts800_ros/param/navigation/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map_path_param.yaml  move_base_params.yaml
ts800_ros/rviz/: debug_navigation.rviz
ts800_ros/script/: auto_remove_ros_log.sh  auto_run_all.sh  auto_run_all_emi.sh  auto_run_all_new.sh  auto_run_ceva.sh  color.py  exit_all.sh  lidar.sh  lidar_test.py  map_monitor.py  remocon.py  save_strace_log.sh
ts800_ros/source/application/: application.cpp  application.h  build_time.h  build_time.h.in  main.cpp
ts800_ros/source/application/clean/: avoiding.cpp  avoiding.h  avoidingMotionPlanner.cpp  avoidingMotionPlanner.h  clean.cpp  clean.h  headingPid.cpp  headingPid.h  imgProcessor.cpp  imgProcessor.h  lineTrack.cpp  lineTrack.h  linear_wheelcontrol.cpp  linear_wheelcontrol.h  motionPid.cpp  motionPid.h  obstaclemap.cpp  obstaclemap.h  patterns.cpp  patterns.h  supplyWater.cpp  supplyWater.h  walltracking.cpp  walltracking.h
ts800_ros/source/application/docking/: findCharger.cpp  findCharger.h  signaltracking.cpp  signaltracking.h
ts800_ros/source/application/explorer/: waveFrontier.cpp  waveFrontier.h
ts800_ros/source/application/external_library/delta_2c_lidar/: lidarInterface.cpp  lidarInterface.h
ts800_ros/source/application/external_library/ros/: rosParameter.cpp  rosParameter.h  rosPublisher.cpp  (+1 more)
ts800_ros/source/application/kidnap/: kidnap.cpp  kidnap.h  kidnapData.cpp  kidnapData.h
ts800_ros/source/application/location/: location.cpp  location.h
ts800_ros/source/application/map/: cells.cpp  cells.h  cleanArea.cpp  cleanArea.h  cleanRoom.cpp  cleanRoom.h  cleanplan.cpp  cleanplan.h  gridmap.cpp  gridmap.h  mapStorage.cpp  mapStorage.h  robotmap.cpp  robotmap.h  trajectory.cpp  trajectory.h
ts800_ros/source/application/pathplan/: dstar.cpp  dstar.h  escapeWall.cpp  escapeWall.h  pathFinderInterface.cpp  pathFinderInterface.h
ts800_ros/source/application/position_estimator/: angleExtrapolation.cpp  angleExtrapolation.h  lowPassFilter.cpp  lowPassFilter.h
ts800_ros/source/application/robot_framework/: Message.h  MessageHandler.cpp  MessageHandler.h  MessageQueue.h  debugCtr.cpp  debugCtr.h  deviceHandler.cpp  deviceHandler.h  errorCollector.cpp  errorCollector.h  errorHandler.cpp  errorHandler.h  keyHandler.cpp  keyHandler.h  rsaDispatcher.cpp  rsaDispatcher.h  rsfMonitor.cpp  rsfMonitor.h  rsuContext.cpp  rsuContext.h  taskAvoidCharger.cpp  taskAvoidCharger.h  taskAvoidDoorSill.cpp  taskAvoidDoorSill.h  taskBoot.cpp  taskBoot.h  taskCharging.cpp  taskCharging.h  taskClean.cpp  taskClean.h  taskCleanRoom.cpp  taskCleanRoom.h  taskDemoRBTPlus.cpp  taskDemoRBTPlus.h  taskDocking.cpp  taskDocking.h  taskDockingExplorer.cpp  taskDockingExplorer.h  taskDryMop.cpp  taskDryMop.h  (+34 more)
ts800_ros/source/application/service/: robotSlamPose.cpp  robotSlamPose.h  service.cpp  service.h  serviceCharging.cpp  serviceCharging.h  serviceClean.cpp  serviceClean.h  serviceDocking.cpp  serviceDocking.h  serviceExplorer.cpp  serviceExplorer.h  serviceIdle.cpp  serviceIdle.h  serviceMacro.cpp  serviceMacro.h  serviceManager.cpp  serviceManager.h  serviceReady.cpp  serviceReady.h  serviceUnDocking.cpp  serviceUnDocking.h  serviceWifi.cpp  serviceWifi.h
ts800_ros/source/application/subTask/: abstractSubTask.h  subTask.cpp  subTask.h
ts800_ros/source/application/wifi/: awsDataManager.cpp  awsDataManager.h  wifi.cpp  wifi.h
ts800_ros/source/common/: clipper.cpp  clipper.hpp  commonStruct.h  coordinate.cpp  coordinate.h  define.h  ebcolor.h  eblog.h  ebtime.cpp  ebtime.h  ebtypedef.h  pthreadLockGuard.h  robotDefine.h  systemTool.cpp  systemTool.h  utils.cpp  utils.h
ts800_ros/source/common/file/: fileJson.cpp  fileJson.h  fileLog.cpp  fileLog.h  fileMng.h  jsonStruct.h
ts800_ros/source/driver/: appInterface.cpp  appInterface.h  font.h  interfaceStruct.h  lcdDebug.cpp  lcdDebug.h  systemInterface.cpp  systemInterface.h  systemInterface_q8.cpp  systemInterface_q8.h  systemInterface_ts800.cpp  systemInterface_ts800.h  userInterface.cpp  userInterface.h
ts800_ros/source/driver/ui/: display.cpp  display.h  led.cpp  led.h  sound.cpp  sound.h
ts800_ros/startup/: initenv.sh  install_required_packages.sh
(+116 files in other folders)
